# serializer version: 1
# name: test_entities[Floor Lamp][light.test_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'christmas',
        'halloween',
        'sunset',
        'vitality',
        'flashing',
        'strobe',
        'fade',
        'smooth',
        'forest',
        'ocean',
        'autumn',
        'cool',
        'flow',
        'relax',
        'modern',
        'rose',
      ]),
      'max_color_temp_kelvin': 6500,
      'max_mireds': 370,
      'min_color_temp_kelvin': 2700,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.RGB: 'rgb'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.test_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'switchbot',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 4>,
    'translation_key': 'light',
    'unique_id': 'aabbccddeeff',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[Floor Lamp][light.test_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 107,
      'color_mode': <ColorMode.RGB: 'rgb'>,
      'color_temp': None,
      'color_temp_kelvin': None,
      'effect': None,
      'effect_list': list([
        'christmas',
        'halloween',
        'sunset',
        'vitality',
        'flashing',
        'strobe',
        'fade',
        'smooth',
        'forest',
        'ocean',
        'autumn',
        'cool',
        'flow',
        'relax',
        'modern',
        'rose',
      ]),
      'friendly_name': 'test-name',
      'hs_color': None,
      'last_run_success': None,
      'max_color_temp_kelvin': 6500,
      'max_mireds': 370,
      'min_color_temp_kelvin': 2700,
      'min_mireds': 153,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.RGB: 'rgb'>,
      ]),
      'supported_features': <LightEntityFeature: 4>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.test_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[Strip Light 3][light.test_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'christmas',
        'halloween',
        'sunset',
        'vitality',
        'flashing',
        'strobe',
        'fade',
        'smooth',
        'forest',
        'ocean',
        'autumn',
        'cool',
        'flow',
        'relax',
        'modern',
        'rose',
      ]),
      'max_color_temp_kelvin': 6500,
      'max_mireds': 370,
      'min_color_temp_kelvin': 2700,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.RGB: 'rgb'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.test_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'switchbot',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 4>,
    'translation_key': 'light',
    'unique_id': 'aabbccddeeff',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[Strip Light 3][light.test_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 76,
      'color_mode': <ColorMode.RGB: 'rgb'>,
      'color_temp': None,
      'color_temp_kelvin': None,
      'effect': None,
      'effect_list': list([
        'christmas',
        'halloween',
        'sunset',
        'vitality',
        'flashing',
        'strobe',
        'fade',
        'smooth',
        'forest',
        'ocean',
        'autumn',
        'cool',
        'flow',
        'relax',
        'modern',
        'rose',
      ]),
      'friendly_name': 'test-name',
      'hs_color': None,
      'last_run_success': None,
      'max_color_temp_kelvin': 6500,
      'max_mireds': 370,
      'min_color_temp_kelvin': 2700,
      'min_mireds': 153,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.RGB: 'rgb'>,
      ]),
      'supported_features': <LightEntityFeature: 4>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.test_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[WoBulb][light.test_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'colorful',
        'flickering',
        'breathing',
      ]),
      'max_color_temp_kelvin': 6500,
      'max_mireds': 370,
      'min_color_temp_kelvin': 2700,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.RGB: 'rgb'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.test_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'switchbot',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 4>,
    'translation_key': 'light',
    'unique_id': 'aabbccddeeff',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[WoBulb][light.test_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 3,
      'color_mode': <ColorMode.RGB: 'rgb'>,
      'color_temp': None,
      'color_temp_kelvin': None,
      'effect': None,
      'effect_list': list([
        'colorful',
        'flickering',
        'breathing',
      ]),
      'friendly_name': 'test-name',
      'hs_color': None,
      'last_run_success': None,
      'max_color_temp_kelvin': 6500,
      'max_mireds': 370,
      'min_color_temp_kelvin': 2700,
      'min_mireds': 153,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.RGB: 'rgb'>,
      ]),
      'supported_features': <LightEntityFeature: 4>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.test_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[WoCeiling][light.test_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6500,
      'max_mireds': 370,
      'min_color_temp_kelvin': 2700,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.test_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'switchbot',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'light',
    'unique_id': 'aabbccddeeff',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[WoCeiling][light.test_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 3,
      'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
      'color_temp': 370,
      'color_temp_kelvin': 2700,
      'friendly_name': 'test-name',
      'hs_color': tuple(
        28.395,
        65.723,
      ),
      'last_run_success': None,
      'max_color_temp_kelvin': 6500,
      'max_mireds': 370,
      'min_color_temp_kelvin': 2700,
      'min_mireds': 153,
      'rgb_color': tuple(
        255,
        167,
        87,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': tuple(
        0.525,
        0.388,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.test_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[WoStrip][light.test_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'christmas',
        'halloween',
        'sunset',
        'vitality',
        'flashing',
        'strobe',
        'fade',
        'smooth',
        'forest',
        'ocean',
        'autumn',
        'cool',
        'flow',
        'relax',
        'modern',
        'rose',
      ]),
      'supported_color_modes': list([
        <ColorMode.RGB: 'rgb'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.test_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'switchbot',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 4>,
    'translation_key': 'light',
    'unique_id': 'aabbccddeeff',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[WoStrip][light.test_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 255,
      'color_mode': <ColorMode.RGB: 'rgb'>,
      'effect': None,
      'effect_list': list([
        'christmas',
        'halloween',
        'sunset',
        'vitality',
        'flashing',
        'strobe',
        'fade',
        'smooth',
        'forest',
        'ocean',
        'autumn',
        'cool',
        'flow',
        'relax',
        'modern',
        'rose',
      ]),
      'friendly_name': 'test-name',
      'hs_color': None,
      'last_run_success': None,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.RGB: 'rgb'>,
      ]),
      'supported_features': <LightEntityFeature: 4>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.test_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
